<resources>
    <string name="app_name">TSP7Calculator</string>

    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Zero">0</string>


    <string name="Minus">-</string>
    <string name="Add">+</string>
    <string name="Multiply">*</string>
    <string name="Divide">/</string>
    <string name="Equals">=</string>
    <string name="Decimal">.</string>

    <string name="clear">C</string>
    <string name="exponent">^</string>
    <string name="parenthesis">()</string>
    <string name="backspace">Del</string>
    <string name="negate">+/-</string>

    <string name="display">Enter a value</string>

    <string name="placeholder"> </string>

    <string name="trigSinText">sin</string>
    <string name="trigCosText">cos</string>
    <string name="trigTanText">tan</string>
    <string name="trigArcSinText">sin<sup><small>-1</small></sup></string>
    <string name="trigArcCosText">cos<sup><small>-1</small></sup></string>
    <string name="trigArcTanText">tan<sup><small>-1</small></sup></string>
    <string name="naturalLogText">ln</string>
    <string name="LogText">log</string>
    <string name="squareRootText">√</string>
    <string name="absoluteValueText">|x|</string>
    <string name="piText">π</string>
    <string name="eText">e</string>
    <string name="create_account">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="attempts_left">Attempts Left:</string>
    <string name="password">Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="android_calculator">Android Calculator</string>
    <string name="back">Back</string>
</resources>